tests/snapshots/report_snapshots__json_formatter_empty.snap
---
source: tests/report_snapshots.rs
expression: JsonFormatter.format(&empty)
---
{
  "contract_meta": {},
  "cpu_instructions": 0,
  "fee": {
    "bandwidth_fee_stroops": 0,
    "base_fee_stroops": 0,
    "cpu_fee_stroops": 0,
    "fee_percentages": {},
    "non_refundable_stroops": 0,
    "refundable_stroops": 0,
    "storage_fee_stroops": 0,
    "total_stroops": 0,
    "total_xlm": "0.0000000"
  },
  "function": "(wasm upload)",
  "ledger_sequence": 0,
  "memory_bytes": 0,
  "network": "mainnet",
  "read_bytes": 0,
  "read_entries": 0,
  "simulation_duration_ms": 0,
  "suggestions": [],
  "tx_size": 0,
  "wasm_hash": "0000000000000000",
  "wasm_size": 0,
  "write_bytes": 0,
  "write_entries": 0
}
