tests/snapshots/report_snapshots__json_formatter_sample.snap
---
source: tests/report_snapshots.rs
expression: JsonFormatter.format(&report)
---
{
  "contract_meta": {},
  "cpu_instructions": 532502,
  "fee": {
    "bandwidth_fee_stroops": 61,
    "base_fee_stroops": 100,
    "cpu_fee_stroops": 372,
    "fee_percentages": {},
    "non_refundable_stroops": 4496,
    "refundable_stroops": 10931,
    "storage_fee_stroops": 4063,
    "total_stroops": 15427,
    "total_xlm": "0.0015427"
  },
  "function": "increment",
  "ledger_sequence": 3894195,
  "memory_bytes": 0,
  "network": "testnet",
  "read_bytes": 0,
  "read_entries": 1,
  "simulation_duration_ms": 87,
  "suggestions": [],
  "tx_size": 156,
  "wasm_hash": "abc123def456",
  "wasm_size": 4096,
  "write_bytes": 136,
  "write_entries": 1
}
