tests/snapshots/report_snapshots__markdown_formatter_empty.snap
---
source: tests/report_snapshots.rs
assertion_line: 101
expression: MarkdownFormatter.format(&empty)
---
## Cost Report: `(wasm upload)`

- **Network:** mainnet (ledger 0)
- **WASM hash:** `0000000000000000`
- **WASM size:** 0 bytes
- **RPC round-trip:** 0 ms

### Resources

| Resource | Consumed |
| --- | --- |
| CPU Instructions | 0 |
| Memory Bytes | 0 |
| Read Entries | 0 |
| Write Entries | 0 |
| Read Bytes | 0 |
| Write Bytes | 0 |
| Transaction Size | 0 |

### Fee Breakdown

| Component | Stroops | % of Total |
| --- | --- | --- |
| Non-refundable | 0 | 0.0% |
| Refundable | 0 | 0.0% |
| CPU | 0 | 0.0% |
| Storage | 0 | 0.0% |
| Bandwidth | 0 | 0.0% |
| **Total** | **0** (0.0000000) | **100.0%** |

### Optimization Suggestions

No cost optimizations identified (fee rates unavailable or no reducible resources).
