tests/snapshots/report_snapshots__markdown_formatter_sample.snap
---
source: tests/report_snapshots.rs
expression: MarkdownFormatter.format(&report)
---
## Cost Report: `increment`

- **Network:** testnet (ledger 3894195)
- **WASM hash:** `abc123def456`
- **WASM size:** 14432 bytes
- **RPC round-trip:** 87 ms

### Resources

| Resource | Consumed |
| --- | --- |
| CPU Instructions | 532502 |
| Memory Bytes | 0 |
| Read Entries | 1 |
| Write Entries | 1 |
| Read Bytes | 0 |
| Write Bytes | 136 |
| Transaction Size | 156 |

### Fee Breakdown

| Component | Stroops | % of Total |
| --- | --- | --- |
| CPU Instructions | 372 |  |
| Storage I/O | 4063 |  |
| Transaction Size | 61 |  |
| Base Fee | 100 |  |
| Rent Fee | 10931 |  |
| **Total** | **15427** (0.0015427) | **100.0%** |

### Optimization Tips

- Tip: 70% of the total fee is refundable, which comes from ledger rent bumps and contract events. Consider reducing state growth and the number or size of emitted events.

### Optimization Suggestions

No cost optimizations identified (fee rates unavailable or no reducible resources).
