tests/snapshots/report_snapshots__table_formatter_empty.snap
---
source: tests/report_snapshots.rs
expression: TableFormatter.format(&empty)
---
Function: (wasm upload)
Network: mainnet (ledger 0)
Simulated at ledger sequence: 0
RPC round-trip: 0 ms
WASM hash: 0000000000000000

Contract meta: absent

+------------------+----------+---------------+
| Resource         | Consumed | Fee (stroops) |
+=============================================+
| CPU Instructions | 0        |               |
|------------------+----------+---------------|
| Memory Bytes     | 0        |               |
|------------------+----------+---------------|
| Read Entries     | 0        |               |
|------------------+----------+---------------|
| Write Entries    | 0        |               |
|------------------+----------+---------------|
| Read Bytes       | 0        |               |
|------------------+----------+---------------|
| Write Bytes      | 0        |               |
|------------------+----------+---------------|
| Transaction Size | 0        |               |
+------------------+----------+---------------+

Fee Breakdown:

+------------------+-----------------------+
| Component        | Fee                   |
+==========================================+
| CPU Instructions | 0 stroops ()          |
|------------------+-----------------------|
| Storage I/O      | 0 stroops ()          |
|------------------+-----------------------|
| Transaction Size | 0 stroops ()          |
|------------------+-----------------------|
| Base Fee         | 0 stroops ()          |
|------------------+-----------------------|
| Rent Fee         | 0 stroops ()          |
|------------------+-----------------------|
| Total            | 0 stroops (0.0000000) |
+------------------+-----------------------+

Optimization Suggestions:
  No cost optimizations identified (fee rates unavailable or no reducible resources).

Simulation latency: 0 ms
