tests/snapshots/report_snapshots__table_formatter_sample.snap
---
source: tests/report_snapshots.rs
assertion_line: 70
expression: TableFormatter.format(&report)
---
Function: increment
Network: testnet (ledger 3894195)
WASM hash: abc123def456

+------------------+----------+---------------+
| Resource         | Consumed | Fee (stroops) |
+=============================================+
| CPU Instructions | 532502   |               |
|------------------+----------+---------------|
| Memory Bytes     | 0        |               |
|------------------+----------+---------------|
| Read Entries     | 1        |               |
|------------------+----------+---------------|
| Write Entries    | 1        |               |
|------------------+----------+---------------|
| Read Bytes       | 0        |               |
|------------------+----------+---------------|
| Write Bytes      | 136      |               |
|------------------+----------+---------------|
| Transaction Size | 156      |               |
+------------------+----------+---------------+

Fee Breakdown:

+------------------+---------------------------+
| Component        | Fee                       |
+==============================================+
| CPU Instructions | 372 stroops ()            |
|------------------+---------------------------|
| Storage I/O      | 4063 stroops ()           |
|------------------+---------------------------|
| Transaction Size | 61 stroops ()             |
|------------------+---------------------------|
| Base Fee         | 100 stroops ()            |
|------------------+---------------------------|
| Rent Fee         | 10931 stroops ()          |
|------------------+---------------------------|
| Total            | 15427 stroops (0.0015427) |
+------------------+---------------------------+

Fee Distribution:

  CPU         | █░                                                      |   2.4%
  Storage I/O | ██████████████▒                                         |  26.3%
  Bandwidth   | ░                                                       |   0.4%
  Rent        | ███████████████████████████████████████                 |  70.9%

Optimization Suggestions:
  No cost optimizations identified (fee rates unavailable or no reducible resources).

Simulation latency: 87 ms
